<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/menu_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/frametop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_container">

        <Button
            android:id="@+id/button1"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/button2"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/button3"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/button4"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/button5"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn5" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/menu_button"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/poster1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1 "
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster4" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />


    <FrameLayout
        android:id="@+id/frametop"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#48D1CC"
        app:layout_constraintBottom_toBottomOf="parent"></FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>